--- a/style_websafe_palatino.css
+++ b/style_websafe_palatino.css
@@ -37,7 +37,7 @@ nav a {
     font-weight: bold;
     transition: opacity 0.3s;
     font-size: 1.1em;
-    font-family: Verdana, Geneva, sans-serif;
+    font-family: Arial, Helvetica, sans-serif !important;
 }
 
 nav a:hover {
