--- a/style_websafe_palatino.css
+++ b/style_websafe_palatino.css
@@ -1,12 +1,12 @@
 body {
-    font-family: 'Trebuchet MS', sans-serif;
+    font-family: "p22-underground", sans-serif;
     margin: 0;
     background-color: #fff;
     color: #4A4A4A;
 }
 
 h1, h2, h3 {
-    font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
+    font-family: "p22-underground", sans-serif;
     font-weight: 700;
 }
 
@@ -37,7 +37,7 @@ nav a {
     font-weight: bold;
     transition: opacity 0.3s;
     font-size: 1.1em;
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: "p22-underground", sans-serif;
 }
 
 nav a:hover {
