--- a/style_p22_final.css
+++ b/style_p22_final.css
@@ -21,7 +21,8 @@ header {
 
 .header-logo {
     height: 100px;
-    margin-right: 2em;
+    margin: 0 auto 2em auto;
+    display: block;
 }
 
 nav {
@@ -485,11 +486,18 @@ body {
 .header {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
+    text-align: center;;
+}   text-align: center;
 }
-
 nav {
     display: flex;
     justify-content: center;
+}   justify-content: center;
 }
+
+
+
+
+
+
+}    display: block;    margin: 0 auto 1em auto;.footer-logo-large {.footer-logo,
