--- a/style_p22_final.css
+++ b/style_p22_final.css
@@ -23,8 +23,8 @@ h1, h2, h3 {
 }
 
 .header-logo {
-    height: 100px;
-    margin: 0.5em auto 0.1em auto; /* Added 2em margin above the logo */
+    height: 130px;  /* Increased from 100px to 130px (30% larger) */
+    margin: 2em auto 0.1em auto;
     display: block;
 }
 
